Parser/logs/waylock.txt
<86>May 16 01:41:39 userdel[3946962]: delete user 'rooter'
<86>May 16 01:41:39 userdel[3946962]: removed group 'rooter' owned by 'rooter'
<86>May 16 01:41:39 userdel[3946962]: removed shadow group 'rooter' owned by 'rooter'
<86>May 16 01:41:39 groupadd[3947024]: group added to /etc/group: name=rooter, GID=1799
<86>May 16 01:41:39 groupadd[3947024]: group added to /etc/gshadow: name=rooter
<86>May 16 01:41:39 groupadd[3947024]: new group: name=rooter, GID=1799
<86>May 16 01:41:39 useradd[3947065]: new user: name=rooter, UID=1799, GID=1799, home=/root, shell=/bin/bash, from=none
<86>May 16 01:41:39 userdel[3947145]: delete user 'builder'
<86>May 16 01:41:39 userdel[3947145]: removed group 'builder' owned by 'builder'
<86>May 16 01:41:39 userdel[3947145]: removed shadow group 'builder' owned by 'builder'
<86>May 16 01:41:39 groupadd[3947200]: group added to /etc/group: name=builder, GID=1800
<86>May 16 01:41:39 groupadd[3947200]: group added to /etc/gshadow: name=builder
<86>May 16 01:41:39 groupadd[3947200]: new group: name=builder, GID=1800
<86>May 16 01:41:39 useradd[3947239]: new user: name=builder, UID=1800, GID=1800, home=/usr/src, shell=/bin/bash, from=none
<13>May 16 01:41:42 rpmi: rpm-macros-zig-4-alt1 sisyphus+377880.100.3.1 1745315290 installed
<13>May 16 01:41:44 rpmi: libgdbm-1.8.3-alt10 sisyphus+346222.200.3.2 1716468404 installed
<13>May 16 01:41:44 rpmi: libexpat-2.7.1-alt1 sisyphus+379929.100.1.1 1743519381 installed
<13>May 16 01:41:44 rpmi: wayland-devel-1.23.1-alt1.1 sisyphus+356019.140.3.1 1724572111 installed
<13>May 16 01:41:44 rpmi: libxkbcommon-1.9.2-alt1 sisyphus+383571.100.1.1 1746644628 installed
<13>May 16 01:41:44 rpmi: libwayland-client-1.23.1-alt1.1 sisyphus+356019.140.3.1 1724572111 installed
<13>May 16 01:41:44 rpmi: libpython-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:44 rpmi: python2-base-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:44 rpmi: libncurses6-6.3.20220618-alt4 sisyphus+327286.4600.14.1 1711486705 installed
<13>May 16 01:41:44 rpmi: libtinfo-devel-6.3.20220618-alt4 sisyphus+327286.4600.14.1 1711486705 installed
<13>May 16 01:41:44 rpmi: libncurses-devel-6.3.20220618-alt4 sisyphus+327286.4600.14.1 1711486705 installed
<13>May 16 01:41:44 rpmi: libmpdec3-2.5.1-alt3 sisyphus+314490.500.5.1 1675432004 installed
<13>May 16 01:41:44 rpmi: openssl-config-3.2.0-alt1 sisyphus+366659.140.4.1 1736956949 installed
<13>May 16 01:41:44 rpmi: llvm19.1-filesystem-19.1.7-alt0.1 sisyphus+372108.200.3.1 1738275526 installed
<13>May 16 01:41:44 rpmi: llvm19.1-polly-19.1.7-alt0.1 sisyphus+372108.200.3.1 1738275526 installed
<13>May 16 01:41:44 rpmi: libedit3-3.1.20250104-alt1 sisyphus+384216.200.2.1 1747315147 installed
<13>May 16 01:41:44 rpmi: llvm19.1-gold-19.1.7-alt0.1 sisyphus+372108.200.3.1 1738275526 installed
<13>May 16 01:41:46 rpmi: llvm19.1-libs-19.1.7-alt0.1 sisyphus+372108.200.3.1 1738275526 installed
<13>May 16 01:41:47 rpmi: libclang-cpp19-19.1.7-alt0.1 sisyphus+372108.200.3.1 1738275526 installed
<13>May 16 01:41:47 rpmi: libb2-0.98.1-alt1_1 sisyphus+291614.100.1.1 1638962877 installed
<13>May 16 01:41:47 rpmi: libp11-kit-1:0.25.5-alt1 sisyphus+352553.100.1.1 1720622573 installed
<13>May 16 01:41:47 rpmi: libtasn1-4.20.0-alt2 sisyphus+375829.100.1.1 1740299335 installed
<13>May 16 01:41:47 rpmi: rpm-macros-alternatives-0.5.3-alt1 sisyphus+371878.100.1.1 1737988822 installed
<13>May 16 01:41:47 rpmi: alternatives-0.5.3-alt1 sisyphus+371878.100.1.1 1737988822 installed
<13>May 16 01:41:47 rpmi: ca-certificates-2025.05.12-alt1 sisyphus+383903.200.2.1 1747060316 installed
<13>May 16 01:41:47 rpmi: ca-trust-0.2.0-alt1 sisyphus+344843.100.1.1 1712743326 installed
<13>May 16 01:41:47 rpmi: p11-kit-trust-1:0.25.5-alt1 sisyphus+352553.100.1.1 1720622573 installed
<13>May 16 01:41:47 rpmi: libcrypto3-3.3.3-alt1 sisyphus+374381.40.2.1 1739299401 installed
<13>May 16 01:41:47 rpmi: libssl3-3.3.3-alt1 sisyphus+374381.40.2.1 1739299401 installed
<13>May 16 01:41:47 rpmi: python3-3.12.10-alt1 sisyphus+381757.100.1.1 1744802808 installed
<13>May 16 01:41:47 rpmi: python3-base-3.12.10-alt1 sisyphus+381757.100.1.1 1744802808 installed
<13>May 16 01:41:47 rpmi: python-modules-encodings-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:48 rpmi: python-modules-compiler-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:48 rpmi: python-modules-email-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:48 rpmi: python-modules-unittest-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:48 rpmi: python-modules-2.7.18-alt12 sisyphus+383335.100.1.1 1746464233 installed
<13>May 16 01:41:48 rpmi: libpython3-3.12.10-alt1 sisyphus+381757.100.1.1 1744802808 installed
<13>May 16 01:41:48 rpmi: python3-module-py3dephell-0.3.1-alt1 sisyphus+365261.200.1.1 1734463433 installed
<13>May 16 01:41:48 rpmi: tests-for-installed-python3-pkgs-0.1.28-alt1 sisyphus+375953.100.2.1 1740855713 installed
<13>May 16 01:41:48 rpmi: rpm-build-python3-0.1.28-alt1 sisyphus+375953.100.2.1 1740855713 installed
<13>May 16 01:41:48 rpmi: rpm-macros-pam0-1.7.0-alt1 sisyphus+349410.1200.7.1 1729774588 installed
<13>May 16 01:41:48 rpmi: libpam0-devel-1.7.0-alt1 sisyphus+349410.1200.7.1 1729774588 installed
<13>May 16 01:41:49 rpmi: python3-dev-3.12.10-alt1 sisyphus+381757.100.1.1 1744802808 installed
<13>May 16 01:41:51 rpmi: zig-0.14.0-alt1 sisyphus+377880.300.3.1 1745316758 installed
<13>May 16 01:41:51 rpmi: libwayland-client-devel-1.23.1-alt1.1 sisyphus+356019.140.3.1 1724572111 installed
<13>May 16 01:41:51 rpmi: libxkbcommon-devel-1.9.2-alt1 sisyphus+383571.100.1.1 1746644628 installed
<13>May 16 01:41:51 rpmi: wayland-protocols-1.44-alt1 sisyphus+382715.100.1.1 1745827508 installed
<13>May 16 01:41:51 rpmi: scdoc-1.11.3-alt1 sisyphus+367362.200.8.1 1738312475 installed
Building target platforms: x86_64
Building for target x86_64
Wrote: /usr/src/in/nosrpm/waylock-1.3.0-alt1.nosrc.rpm (w1.gzdio)
Installing waylock-1.3.0-alt1.src.rpm
Building target platforms: x86_64
Building for target x86_64
Executing(%prep): /bin/sh -e /usr/src/tmp/rpm-tmp.64037
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ rm -rf waylock-1.3.0
+ echo 'Source #0 (waylock-1.3.0.tar):'
Source #0 (waylock-1.3.0.tar):
+ /bin/tar -xf /usr/src/RPM/SOURCES/waylock-1.3.0.tar
+ cd waylock-1.3.0
+ echo 'Source #1 (vendor.tar):'
Source #1 (vendor.tar):
+ /bin/tar -xf /usr/src/RPM/SOURCES/vendor.tar
+ /bin/chmod -c -Rf u+rwX,go-w .
+ mv ./vendor /usr/src/RPM/BUILD/zig-cache
+ exit 0
Executing(%build): /bin/sh -e /usr/src/tmp/rpm-tmp.5258
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd waylock-1.3.0
+ /usr/bin/zig build --verbose --release=safe -Dtarget=native -Dcpu=baseline -Doptimize=ReleaseSafe --system /usr/src/RPM/BUILD/zig-cache --cache-dir /usr/src/RPM/BUILD/zig-cache --global-cache-dir /usr/src/RPM/BUILD/zig-cache -Dpie
/usr/src/RPM/BUILD/waylock-1.3.0/build.zig.zon:2:13: error: expected enum literal
    .name = "waylock",
            ^~~~~~~~~
error: Bad exit status from /usr/src/tmp/rpm-tmp.5258 (%build)


RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.5258 (%build)
Command exited with non-zero status 1
0.40user 0.15system 0:00.56elapsed 100%CPU (0avgtext+0avgdata 71092maxresident)k
0inputs+0outputs (0major+35504minor)pagefaults 0swaps
hsh-rebuild: rebuild of `waylock-1.3.0-alt1.src.rpm' failed.
Command exited with non-zero status 1
4.80user 3.10system 0:17.62elapsed 44%CPU (0avgtext+0avgdata 142256maxresident)k
0inputs+0outputs (0major+282652minor)pagefaults 0swaps
